--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                     design, Data Science and
                     so on
                 </p>
+                <p>
+                    You also stand a chance to win an APPLE LAPTOP and SCHOLARSHIP
+                </p>
                 <p>Click the link below to join our community.</p>
                 <div class="discover">
                     <a href="https://chat.whatsapp.com/CdjMfXVVhMU45HoCBqsLrX">
